--- a/tpl_admin/simpleboot/Admin/Product/add.html
+++ b/tpl_admin/simpleboot/Admin/Product/add.html
@@ -167,6 +167,17 @@ body fieldset legend {
                 
 				</td>
             </tr> 
+			
+			<tr>
+              <th width="80">相册图集 </th>
+              <td>
+				<fieldset class="blue pad-10">
+		        <legend>图片列表</legend>
+		        <ul id="photos" class="picList"></ul>
+				</fieldset>
+				<div class="bk10"></div>
+				<a href='javascript:void(0);' onclick="javascript:flashupload('albums_images', '图片上传','photos',change_images,'10,gif|jpg|jpeg|png|bmp,0','','','')" class="btn">选择图片 </a> </td>
+            </tr>
         </tbody>
       </table>
     </div>
